# pypostester

./: .gitignore  README.md  README_cn.md  pyproject.toml  requirements.txt  setup.py
data/: BTCUSDT-SWAP_15m.hdf  BTCUSDT-SWAP_15m.parquet  BTCUSDT-SWAP_1h.hdf
examples/: backtest_btc.py  buy_hold_test.py  custom_figure.py  custom_indicator.py  utils.py
src/core/: backtester.py
src/indicators/: base.py  registry.py  returns.py  risks.py
src/pypostester/: __init__.py
src/pypostester/core/: __init__.py  backtester.py  constants.py
src/pypostester/indicators/: base.py  indicators.py  registry.py  returns.py  risks.py
src/pypostester/models/: __init__.py  models.py
src/pypostester/templates/: report_template.html
src/pypostester/utils/: i18n.py  validation.py  visualization.py
src/pypostester/visualization/: base.py  figures.py  registry.py  visualizer.py
src/pypostester/visualization/templates/: report_template.html
src/templates/: report_template.html
src/utils/: __init__.py  validation.py  visualization.py
tests/: test_backtester.py
